--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplication3-2159dea7-4add-45ef-a9ee-c5d3342d4ee6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=Praktyki;Trusted_Connection=True;MultipleActiveResultSets=true; Trust Server Certificate = True;"
+    //"aspnet-WebApplication3-2159dea7-4add-45ef-a9ee-c5d3342d4ee6;"
   },
   "Logging": {
     "LogLevel": {
